# ProgHomework.FirstSemester

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  buildAndTest.ps1
.github/workflows/: cmake-multi-platform.yml  main.yml
homework_1/: 1_swap.c  1_zeroElements.c  2_swap.c  3_integerDivision.c  4_luckyTickets.c  5_balanced.c  6_primes.c  7_substrings.c  8_arraySwap.c
homework_10/: CMakeLists.txt
homework_10/task_1/: CMakeLists.txt  fileGraphReader.c  fileGraphReader.h  graph.c  graph.h  main.c  test.c
homework_10/task_1/testFiles/: complexA_countries.txt  complexA_graph.txt  complexB_countries.txt  complexB_graph.txt  fiveCitiesFiveCountries_countries.txt  fiveCitiesFiveCountries_graph.txt  fiveCitiesTwoCountries_countries.txt  fiveCitiesTwoCountries_graph.txt  twoCities_graph.txt
homework_2/: CMakeLists.txt  README.md
homework_2/task_1/: CMakeLists.txt  halfQSort.c  halfQSort.h  main.c  test.c
homework_2/task_2/: CMakeLists.txt  main.c  sortings.c  sortings.h  test.c
homework_2/task_3/: CMakeLists.txt  main.c  power.c  power.h  sortings.c  test.c
homework_2/task_4/: CMakeLists.txt  fib.c  fib.h  fibonacci.c  halfQSort.c  main.c  test.c
homework_3/: CMakeLists.txt  README.md
homework_3/task_1/: CMakeLists.txt  frequencySearch.c  main.c  test.c
homework_3/task_2/: CMakeLists.txt  main.c  sortAndSearch.c  sortAndSearch.h  test.c
homework_3/task_3/: CMakeLists.txt  main.c  smartQSort.c  smartQSort.h  test.c
homework_4/: CMakeLists.txt  README.md
homework_4/task_1/: CMakeLists.txt  binaryAddition.c  binaryAddition.h  main.c  test.c
homework_4/task_2/: .gitignore  CMakeLists.txt  database.c  database.h  main.c  personEntry.c  personEntry.h  test.c
homework_4/task_3/: CMakeLists.txt  arrayIO.c  arrayIO.h  frequencySearch.h  main.c  test.c
homework_5/: CMakeLists.txt  README.md
homework_5/stack/: CMakeLists.txt  stack.c  stack.h  test.c
homework_5/task_1/: CMakeLists.txt  bracketsBalance.c  bracketsBalance.h  database.c  database.h  main.c  test.c
homework_5/task_2/: CMakeLists.txt  main.c  postfixCalc.c  postfixCalc.h  test.c
homework_5/task_3/: CMakeLists.txt  main.c  shuntingYard.c  shuntingYard.h  test.c
homework_6/: CMakeLists.txt  README.md
homework_6/task_1/: .gitignore  CMakeLists.txt  entryList.c  entryList.h  main.c  test.c
homework_6/task_1/testFiles/: oneEntry_in.txt  oneEntry_out.txt  someEntries_in.txt  someEntries_out_byName.txt  someEntries_out_byPhone.txt  twoEntries_in.txt  twoEntries_out_byName.txt  twoEntries_out_byPhone.txt
homework_6/task_2/: CMakeLists.txt  cyclicList.c  cyclicList.h  main.c  test.c
homework_6/task_3/: CMakeLists.txt  main.c  sortedList.c  sortedList.h  test.c
homework_7/: CMakeLists.txt  README.md
homework_7/task_1/: .gitignore  CMakeLists.txt  expressionTree.c  expressionTree.h  main.c  test.c
homework_7/task_2/: CMakeLists.txt  intStringDictionary.c  intStringDictionary.h  main.c  test.c
homework_8/: CMakeLists.txt  README.md
homework_8/task_1/: CMakeLists.txt  main.c  stringDictionary.c  stringDictionary.h  test.c
homework_9/: CMakeLists.txt  README.md
homework_9/task_1/: CMakeLists.txt  frequencyList.c  frequencyList.h  frequencyLookup.c  frequencyLookup.h  main.c  test.c
